Added EOS login & Firebase Get/Push

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -239,25 +239,29 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[OnlineSubsystem]
+DefaultPlatformService=EOS
+bUseLogging=true
+
 [/Script/OnlineSubsystemEOS.EOSSettings]
-DefaultArtifactName=EOS_SpeedrunningGame
-AuthType=accountportal
-CacheDir=CacheDir
-+Artifacts=(ArtifactName="EOS_SpeedrunningGame",ClientId="xyza7891wBpAHv3z1Cw5YHgJ1IuCl5S1",ClientSecret="IZJ39YAZj9yvawj8Q3Jv92OpZWUJMal2t6TlgQig5W0",ProductId="934e8bff881a42cf87e6d343254c9e7f",SandboxId="p-38bw8f7dgepcna28kd5n34nwlq8wqw",DeploymentId="943300d911764852966f925436036765")
-+AuthScopeFlags=BasicProfile
+DefaultArtifactName=Dev
 bEnableOverlay=True
 bEnableSocialOverlay=True
 bEnableEditorOverlay=True
 bUseEAS=True
 bUseEOSConnect=True
-bUseEOSSessions=True
-bUseNewLoginFlow=True
+bUseEOSSessions=False
+bPreferPersistentAuth=False
+bUseNewLoginFlow=False
+-AuthScopeFlags=BasicProfile
+-AuthScopeFlags=FriendsList
+-AuthScopeFlags=Presence
++AuthScopeFlags=BasicProfile
++AuthScopeFlags=Presence
++AuthScopeFlags=FriendsList
 
-[OnlineSubsystem]
-DefaultPlatformService=EOS
++Artifacts=(ArtifactName="Dev",ClientId="xyza789102dbNRpRe7rquBIn8Qj3pJmQ",ClientSecret="eyMTVX/OESp4AX7vHW9Zf4fx+eR7U1eWw/CBRQXoO7Y",ProductId="9cddc4df076d4f6e863c9c313b9cd7bc",SandboxId="p-vbndfjlh5j22c44lx6ekry4u2sm4m3",DeploymentId="13c84b2c72184ddf87151a02001ba55c")
 
-[Core.Log]
-LogEOS=VeryVerbose
-LogOnline=VeryVerbose
+
 
 
