--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -117,6 +117,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Show Ability Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
 +ActionMappings=(ActionName="Teleport",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +ActionMappings=(ActionName="Exit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
++ActionMappings=(ActionName="TeleportHold",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Game/FirstPerson/Input/MobileControls.MobileControls
